--- a/README
+++ b/README
@@ -8,4 +8,4 @@ state-of-the-art techniques that have to do with concrete practical problems of
 machine learning, artificial intelligence, and networks of sensors, smartphones, and
 robots. 
 
-Documentation is available on http://mrquincle.github.com/nets
+Documentation is available on http://almende.github.com/nets
